[package]
description = "Pretty-print any text based on brackets nesting. CLI crate"
name        = "decondenser-cli"
version     = "0.1.0"

edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "decondenser"
path = "src/main.rs"

# If docs are enabled, they collide with the docs for the `decondenser` library
# crate. Details: https://github.com/rust-lang/cargo/issues/6313
doc = false

[dependencies]
anyhow        = { workspace = true }
clap          = { workspace = true, features = ["derive"] }
decondenser   = { workspace = true, features = ["unstable"] }
serde         = { workspace = true, features = ["derive"] }
toml_edit     = { workspace = true, features = ["parse", "serde"] }
unicode-width = { workspace = true }
