[package]
description = "Pretty-print any text based on brackets nesting. CLI crate"
name        = "decondenser-cli"
version     = "0.1.0"

edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "decondenser"
path = "src/main.rs"

# If docs are enabled, they collide with the docs for the `decondenser` library
# crate. Details: https://github.com/rust-lang/cargo/issues/6313
doc = false

[dependencies]
anyhow             = { workspace = true }
codespan-reporting = { workspace = true, features = ["termcolor"] }
decondenser        = { workspace = true, features = ["unstable"] }
hashlink           = { workspace = true }
marked-yaml        = { workspace = true }
unicode-width      = { workspace = true }

[dependencies.clap]
workspace = true
# See https://docs.rs/clap/latest/clap/_features/index.html
features = ["std", "color", "help", "usage", "error-context", "suggestions"]
