[package]
description = "Pretty-print any text based on brackets nesting"
name        = "decondenser"
version     = "0.1.0"

# We may consider publishing this crate if people want to use it as a library.
# So if you (yes you!, the one reading this comment), want to use this crate as
# a library, consider opening an issue asking to publish this crate on
# crates.io. We'll consider doing it only if you express an interest in it.
# Otherwise the API of this crate should not be considered stable/or public
# until it's officially published on crates.io.
publish = true

edition    = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
allman = { git = "https://github.com/mcy/strings.git", rev="94e327ac7c4150be9903063b1996f81041baf107" }

[dev-dependencies]
expect-test = "1.5"
serde_json  = "1.0"
toml_edit   = "0.22"
